updated services admin page fix for collapse benefits, updated home to use item-list for icons, and updated service page

--- a/adult-family-home/src/app/component/UI/item-list/item-list.component.css
+++ b/adult-family-home/src/app/component/UI/item-list/item-list.component.css
@@ -75,3 +75,126 @@
   }
 
 }
+
+
+.minimal-container{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 2rem;
+  margin-bottom: 2rem;
+}
+
+.our-services-section {
+  background-color: var(--dark-background-color);
+  padding: 50px 0;
+  text-align: center;
+  position: relative;
+  width: 100%;
+}
+
+.our-services-title {
+  font-size: 2.5em;
+    margin-bottom: 15px;
+  }
+
+.our-services-title.main {
+  color: var(--primary-color);
+}
+
+.our-services-title.highlight {
+  color: var(--accent-color);
+}
+
+.our-services-description {
+  color: var(--primary-color);
+  margin-bottom: 40px;
+}
+
+.our-services-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 30px;
+  justify-items: center;
+  align-items: center;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.our-services-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  width: 100%;
+  max-width: 400px;
+  padding: 20px;
+  color: var(--primary-color);
+  border-radius: 10px;
+}
+
+.our-services-item-icon {
+  font-size: 50px;
+  margin-bottom: 10px;
+}
+
+.our-services-item h3 {
+  font-size: 1.5em;
+  color: var(--accent-color);
+  margin-bottom: 10px;
+}
+
+.our-services-item i {
+  font-size: 2em;
+  color: var(--accent-color);
+  margin-bottom: 10px;
+}
+
+.our-services-item p {
+  color: var(--primary-color);
+  font-size: 16px;
+  text-align: center;
+}
+
+.our-services-item-title {
+  margin-bottom: 10px;
+}
+
+
+@media (max-width: 768px) {
+  .our-services-container {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+  }
+
+  .our-services-item h3 {
+    font-size: 1.2em;
+  }
+
+  .our-services-item p {
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 480px) {
+  .our-services-container {
+    grid-template-columns: 1fr;
+    gap: 20px;
+  }
+
+  .our-services-item {
+    margin-bottom: 20px;
+  }
+
+  .our-services-item h3 {
+    font-size: 1.1em;
+  }
+
+  .our-services-item p {
+    font-size: 14px;
+  }
+
+  .our-services-item i {
+    font-size: 1.8em;
+  }
+}
